--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-[{*.js,*.ts,*.json}]
+[{*.js,*.ts,*.json,*.lua}]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
