--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": ["storage"]
+  "permissions": ["storage", "webNavigation", "activeTab"]
 }
